--- a/src/Web/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
+    <vc:styles></vc:styles>
 </head>
-<body>
+<body class="@(ViewData["Slug"] == null ? "" : "game-" + ViewData["Slug"])">
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
