--- a/src/Web/Pages/_ViewImports.cshtml
+++ b/src/Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using Dgf.Web
+@using Dgf.Framework
 @namespace Dgf.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Dgf.Web
