More fleshing out of interactions and testing.

--- a/src/Web/Pages/Host.cshtml
+++ b/src/Web/Pages/Host.cshtml
@@ -41,5 +41,5 @@
 
     }
 </script>
-<iframe class="host-game-frame" src="@Model.GetUrl(Model.GameState)" title="Play Window" onload="pageChanged(this, this.contentWindow.location);">
+<iframe class="host-game-frame" src="@Model.GetUrl()" title="Play Window" onload="pageChanged(this, this.contentWindow.location);">
 </iframe>
