--- a/src/Web/Pages/NewGame.cshtml
+++ b/src/Web/Pages/NewGame.cshtml
@@ -10,6 +10,10 @@
     @CommonMark.Encode(Model.Game, Model.Game.Description)
 </p>
 
+<p>
+    <em>@Model.StateDescription</em>
+</p>
+
 <form method="post">
     Initial game state: <br />
 
