--- a/src/Web/Pages/Play.cshtml
+++ b/src/Web/Pages/Play.cshtml
@@ -14,7 +14,21 @@
 <ul class="transition-list">
     @foreach (var transition in Model.GameStateDescription.Transitions)
     {
-    <li class="transition-option"><a href="@Model.GetUrl(transition.State)">@CommonMark.Encode(Model.Game, transition.Text)</a></li>}
+    <li class="transition-option @transition.Display.Classes">
+        @if (transition.Display.ImageUri != null)
+        {
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                <defs>
+                    <filter id="colorMask3">
+                        <feFlood flood-color="currentColor" result="flood" />
+                        <feComposite in="SourceGraphic" in2="flood" operator="arithmetic" k1="1" k2="0" k3="0" k4="0" />
+                    </filter>
+                </defs>
+                <image width="100%" height="100%" xlink:href="@transition.Display.ImageUri.ReplaceSlug(Model.Game)" filter="url(#colorMask3)" />
+            </svg>
+        }
+        <a href="@Model.GetUrl(transition.State)">@CommonMark.Encode(Model.Game, transition.Display.Text)</a>
+    </li>}
 </ul>
 
 
