--- a/src/Web/Pages/Components/Styles/Default.cshtml
+++ b/src/Web/Pages/Components/Styles/Default.cshtml
@@ -3,6 +3,6 @@
 {
     foreach (var style in Model.HostingConfiguration.StyleSheetPaths)
     {
-        <link rel="stylesheet" href="~/@Model.Slug/@style" />
+        <link rel="stylesheet" href="@style" />
     }
 } 
