--- a/src/Web/Pages/Play.cshtml
+++ b/src/Web/Pages/Play.cshtml
@@ -11,6 +11,9 @@
     @CommonMark.Encode(Model.Game, Model.GameStateDescription.Summary.Description)
 </div>
 
+<div class="hidden" id="sfx" data-sound="@Model.GameStateDescription.Summary.SfxUri"></div>
+<div class="hidden" id="music" data-song="@Model.GameStateDescription.Summary.MusicUri"></div>
+
 <ul class="transition-list">
     @foreach (var transition in Model.GameStateDescription.Transitions)
     {
@@ -24,7 +27,7 @@
                         <feComposite in="SourceGraphic" in2="flood" operator="arithmetic" k1="1" k2="0" k3="0" k4="0" />
                     </filter>
                 </defs>
-                <image width="100%" height="100%" xlink:href="@transition.Display.ImageUri.ReplaceSlug(Model.Game)" filter="url(#colorMask3)" />
+                <image width="100%" height="100%" xlink:href="@transition.Display.ImageUri" filter="url(#colorMask3)" />
             </svg>
         }
         <a href="@Model.GetUrl(transition.State)">@CommonMark.Encode(Model.Game, transition.Display.Text)</a>
