--- a/src/TestGame/Assets/Styles.css
+++ b/src/TestGame/Assets/Styles.css
@@ -1,4 +1,28 @@
-﻿/* Meta */
+﻿/* Variables */
+:root {
+    --bg: #282828;
+    --bg1: #3c3836;
+    --bg-dark: #1d2021;
+    --red: #cc241d;
+    --red-light: #fb4934;
+    --green: #98971a;
+    --green-light: #b8bb26;
+    --yellow: #d79921;
+    --yellow-light: #fabd2f;
+    --blue: #458588;
+    --blue-light: #83a598;
+    --purple: #b16286;
+    --purple-light: #d3869b;
+    --aqua: #689d6a;
+    --aqua-light: #8ec07c;
+    --orange: #d65d0e;
+    --orange-light: #fe8019;
+    --gray: #a89984;
+    --gray-dark: #928374;
+    --fg: #ebdbb2;
+}
+
+/* Meta */
 @font-face {
     font-family: titleFont;
     src: url(/Test/Assets/Fonts/DeutscheZierschrift.ttf);
@@ -12,15 +36,19 @@ body {
     display: none;
 }
 
+
 /* Host Frame / Header */
 .page-host {
-    background-color: #000;
-    color: silver;
+    background-color: var(--bg-dark);
+    color: var(--fg);
 }
 
-.page-play {
-    background-color: silver;
+div.host-container {
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 div.host-title-container {
     float: left;
@@ -48,11 +76,11 @@ li.host-menu-item {
 }
 
 li.host-menu-item > a:link, li.host-menu-item > a:visited, li.host-menu-item > a:visited {
-    color: #369;
+    color: var(--blue);
     text-decoration: none;
 }
 li.host-menu-item > a:hover {
-    color: #ccc;
+    color: var(--blue-light);
     text-decoration: underline;
 }
 
@@ -67,10 +95,86 @@ li.host-menu-item > a:hover {
     border-top: solid 1px black;
 
     /* duplicates the body color but prevents flicker */
-    background-color: silver;
+    background-color: var(--bg);
 }
 
 /* Play */
+.page-play {
+    background-color: var(--bg);
+    color: var(--fg);
+}
+
+div.game-container {
+    max-width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h1.state-title {
+    float: left;
+    width: 75%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+h1.state-title > p {
+    margin: 0;
+}
+
+div.state-description {
+    width: 75%;
+    float: left;
+}
+
+/* Status attributes */
+div.state-status-attributes {
+    width: 25%;
+    float: right;
+}
+
+ul.state-status-attribute-list {
+    list-style: none;
+}
+
+li.state-status-attribute-item {
+    background-color: var(--bg1);
+    border-radius: 9px;
+    margin-bottom: 2px;
+    padding: 4px;
+    position: relative;
+}
+
+li.state-status-attribute-item > svg {
+    position: absolute;
+    width: 1em;
+    height: 1em;
+    
+    top: 50%; 
+    transform: translateY(-50%);
+}
+
+li.state-status-attribute-item > p {
+    margin: 0px;
+    margin-left: 1.5em;
+    display: inline-block;
+}
+
+/* Interaction Result */
+div.interaction-result {
+    background-color: var(--bg-dark);
+    font-style: italic;
+    clear: both;
+    border-radius: 2px;
+    border: solid 1px var(--bg1);
+    box-shadow: 2px 2px 4px var(--bg-dark);
+    padding: 0.2em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.interaction-result > p {
+    margin: 0;
+}
 
 .interaction-result svg {
     width: 1em;
@@ -78,26 +182,45 @@ li.host-menu-item > a:hover {
     color: red;
 }
 
+/* Interactions */
 ul.transition-list {
     list-style: none;
     padding: 0;
     margin: 0;
     border: solid 1px #330;
     border-bottom: none;
+    box-shadow: 2px 2px 4px var(--bg-dark);
 }
 
 li.transition-option {
+    position: relative;
     margin: 0;
     padding: 0;
-    padding: 2px;
+    padding: 3px;
     border-bottom: solid 1px #330;
-    background-color: initial;
+    background-color: var(--bg1);
     transition: all 0.1s ease-in-out;
+    display: flex;
 }
 
 li.transition-option:hover {
-    background-color: #eee;
+    background-color: var(--bg-dark);
     transition: all 0.1s ease-in-out;
+}
+
+li.transition-option > a {
+    flex: 1;
+    margin-left: 1.5em;
+}
+
+li.transition-option > a:link, li.transition-option > a:visited, li.transition-option > a:visited {
+    color: var(--blue);
+    text-decoration: none;
+}
+
+li.transition-option > a:hover {
+    color: var(--blue-light);
+    text-decoration: underline;
 }
 
 li.transition-option > a > p {
@@ -105,8 +228,12 @@ li.transition-option > a > p {
     display: inline-block;
 }
 
-.transition-option > svg {
+li.transition-option > svg {
+    position: absolute;
     width: 1em;
     height: 1em;
     color: red;
+
+    top: 50%; 
+    transform: translateY(-50%);
 }
