--- a/src/Web/Pages/Play.cshtml
+++ b/src/Web/Pages/Play.cshtml
@@ -5,11 +5,32 @@
     ViewData["Title"] = $"Playing - {Model.Game.Name}";
 }
 
-<div class="game-container">
+<svg xmlns="http: //www.w3.org/2000/svg" version="1.1" width="0" height="0">
+    <defs>
+        <filter id="colorMask1">
+            <feFlood flood-color="currentColor" result="flood" />
+            <feComposite in="SourceGraphic" in2="flood" operator="arithmetic" k1="1" k2="0" k3="0" k4="0" />
+        </filter>
+        <filter id="colorMask2">
+            <feFlood flood-color="currentColor" result="flood" />
+            <feComposite in="SourceGraphic" in2="flood" operator="arithmetic" k1="1" k2="0" k3="0" k4="0" />
+        </filter>
+        <filter id="colorMask3">
+            <feFlood flood-color="currentColor" result="flood" />
+            <feComposite in="SourceGraphic" in2="flood" operator="arithmetic" k1="1" k2="0" k3="0" k4="0" />
+        </filter>
+        <filter id="colorMask4">
+            <feFlood flood-color="currentColor" result="flood" />
+            <feComposite in="SourceGraphic" in2="flood" operator="arithmetic" k1="1" k2="0" k3="0" k4="0" />
+        </filter>
+        <filter id="colorMask5">
+            <feFlood flood-color="currentColor" result="flood" />
+            <feComposite in="SourceGraphic" in2="flood" operator="arithmetic" k1="1" k2="0" k3="0" k4="0" />
+        </filter>
+    </defs>
+</svg>
 
-    <h1 class="state-title @Model.GameStateDescription.Summary.Title.Classes">
-        <vc:item-display game="Model.Game" item="Model.GameStateDescription.Summary.Title" href=""></vc:item-display>
-    </h1>
+<div class="game-container">
 
     @if (Model.GameStateDescription.Summary.Attributes != null)
     {
@@ -24,7 +45,11 @@
             </ul>
         </div>
     }
-    
+
+    <h1 class="state-title @Model.GameStateDescription.Summary.Title.Classes">
+        <vc:item-display game="Model.Game" item="Model.GameStateDescription.Summary.Title" href=""></vc:item-display>
+    </h1>
+
     <div class="state-description @Model.GameStateDescription.Summary.Description.Classes">
         <vc:item-display game="Model.Game" item="Model.GameStateDescription.Summary.Description" href=""></vc:item-display>
     </div>
