--- a/src/Web/Pages/Host.cshtml
+++ b/src/Web/Pages/Host.cshtml
@@ -36,7 +36,7 @@
         var state = iframeUrl.href.substring(iframeUrl.href.lastIndexOf('/') + 1);
         var thisUrl = window.location.href.substring(0, window.location.href.lastIndexOf('/') + 1);
         var newHistoryUrl = thisUrl + state;
-        history.pushState(null, "", newHistoryUrl);
+        history.replaceState(null, "", newHistoryUrl);
 
         var musicElement = iframe.contentWindow.document.querySelector('#music');
         if (musicElement != null) {
